<resources>
    <string name="app_name">MyGym</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to MyGym</string>
    <string name="mail">Email:</string>
    <string name="password">Password:</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">Login</string>
    <string name="contact_us">Contact us</string>
    <string name="price_list">Price list</string>
    <string name="about_us">About us</string>
    <string name="members">Members</string>
    <string name="staff">Staff</string>
    <string name="news">News</string>
    <string name="edit">Edit</string>
    <string name="coach">Coach: </string>
    <string name="membership_status">Membership status: </string>
    <string name="expired">Expired</string>
    <string name="active">Active</string>
    <string name="search_members">Search members...</string>
    <string name="search_staff">Search staff...</string>
    <string name="logOff">Log off</string>
    <string name="membership">Membership</string>
    <string name="messenger">Messenger</string>
    <string name="sent_to">Send to:</string>
    <string name="title">Title:</string>
    <string name="write_message">Write chat...</string>
    <string name="send">Send</string>
    <string name="discard">Discard</string>
    <string name="answer">Answer</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="date">Date:</string>
    <string name="subject">Subject:</string>
    <string name="home">Home</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="birth_day">Birth date:</string>
    <string name="gender">Gender:</string>
    <string name="role">Role:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="is_in_gym">Is in gym:</string>
    <string name="membership_active_until">Membership active until:</string>
    <string name="membership_remaining_days">Membership remaining days:</string>
    <string name="last_paid">Last paid:</string>
    <string name="tariff">Tariff:</string>
    <string name="members_in_gym">Members in gym:</string>
    <string name="present">Present</string>
    <string name="not_present">Not present</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="period">Period:</string>
    <string name="working_hours">Working hours:</string>
    <string name="choose_a_person_to_chat_with">Choose a person to chat with</string>
    <string name="send_anonymous_message">Send anonymous message</string>
    <string name="send_regular_message">Send regular message</string>
    <string name="reset_password">Reset password</string>
</resources>
